--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 
 version = "0.0.0"
-group = "com.yourname.forkcraft" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = "com.nerdz.forkcraft" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "forkcraft"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
